maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:99: error: not found: value marquerSol
  marquerSol(0,0)
  ^